trying to bind update link in property edit to the right route, working in that

--- a/seMgmtApp/templates/add_property.html
+++ b/seMgmtApp/templates/add_property.html
@@ -8,7 +8,7 @@
         <h4>ADD NEW PROPERTY</h4>
     </div>
     <div class="row mx-auto px-2 form-property">
-        <form action="{{ url_for('properties.add_property') }}" method="POST">
+        <form action="{{ url_for('properties.add_property') }}" method="GET">
             <!-- Category RENT OR BUY -->
             <ul class="nav nav-tabs justify-content-center mb-2">
                 <li class="nav-item">
