fixed some issues in card displaying, added 'add a property' link to the navbar if logged in, added delete button to the property template

--- a/seMgmtApp/templates/partials/cards.html
+++ b/seMgmtApp/templates/partials/cards.html
@@ -19,14 +19,14 @@
                 </div>
                 <div class="row card-price-box">
                     <span class="card-type">
-                        {% if property.rent_price != null %}
+                        {% if property.rent_price > "1" %}
                         For Rent -
                         {% else %}
                         For Sale -
                         {% endif %}
                     </span>
                     <span class="card-price">
-                        {% if property.rent_price != null %}
+                        {% if property.rent_price > "1" %}
                         £{{ property.rent_price }} pcm
                         {% else %}
                         £{{ property.sale_price }}
