--- a/seMgmtApp/templates/property.html
+++ b/seMgmtApp/templates/property.html
@@ -80,6 +80,10 @@
                                     <a href={{ url_for( 'properties.edit_property', property_id = detail._id) }}><button type="submit"
                                             class="btn btn-dark btn-block mb-3 mx-2">Edit property</button></a>
                                 </div>
+                                <div class="col-12 mt-3 ml-auto">
+                                    <a href={{ url_for( 'properties.delete_property', property_id = detail._id) }}><button type="submit"
+                                            class="btn btn-dark btn-block mb-3 mx-2">Delete property</button></a>
+                                </div>
                                 {% else %}
                                 {% endif %}
                             </div>
