edited helpers for add property dropdown, created local lists instead server db, some layout issues fixed in property details page

--- a/seMgmtApp/templates/property.html
+++ b/seMgmtApp/templates/property.html
@@ -69,7 +69,7 @@
                                         <strong>Baths:</strong>
                                         <span>{{detail.num_bath}}</span>
                                     </li>
-                                    <li class="d-flex justify-content-between pt-2">
+                                    <li class="d-flex justify-content-between py-1">
                                         <strong>Agent:</strong>
                                         <span>{{detail.agent}}</span>
                                     </li>
