--- a/seMgmtApp/templates/add_property.html
+++ b/seMgmtApp/templates/add_property.html
@@ -93,7 +93,7 @@
             </div>
             <div class="form-group for-rent-div required">
                 <span>Please inform the monthly rent price</span><br>
-                <input type="number" min="1" step="any" name="rent_price" placeholder="£">
+                <input type="number" min="1" step="any" name="rent_price" placeholder="£"><span> pcm</span>
             </div>
             <!-- Assigned agent -->
             <div class="form-group">
