--- a/seMgmtApp/templates/index.html
+++ b/seMgmtApp/templates/index.html
@@ -6,43 +6,26 @@
 
 
     <!-- Carousel To buy -->
-    <div class="container carousel-buy">
+    <div class="container col-12 col-md-10 col-lg-8 col-xl-4 carousel-buy">
         <div class="carousel slide" id="main-carousel" data-ride="carousel">
             <ol class="carousel-indicators">
                 <li data-target="#main-carousel" data-slide-to="0" class="active"></li>
                 <li data-target="#main-carousel" data-slide-to="1"></li>
                 <li data-target="#main-carousel" data-slide-to="2"></li>
                 <li data-target="#main-carousel" data-slide-to="3"></li>
+                <li data-target="#main-carousel" data-slide-to="4"></li>
+                <li data-target="#main-carousel" data-slide-to="5"></li>
             </ol><!-- /.carousel-indicators -->
 
             <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img class="d-block img-fluid" src="https://s19.postimg.cc/qzj5uncgj/slide1.jpg" alt="">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h1>Mountain</h1>
+                {% for item in for_sale %}
+                <div class="carousel-item img-fluid {% if loop.index == 1 %} active {% else %}{% endif %}">
+                    <img class="d-block w-100" src="{% if item.imgUrl %} {{item.imgUrl}} {% else %} {{url_for('static', filename='img/no-image.png') }}{% endif %}" alt="Property for sale">
+                    <div class="carousel-caption d-md-block">
+                        <span class="title-carousel">{{ item.address }}</span>
                     </div>
                 </div>
-                <div class="carousel-item">
-                    <img class="d-block img-fluid" src="https://s19.postimg.cc/lmubh3h0j/slide2.jpg" alt="">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h3>Mountain</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block img-fluid" src="https://s19.postimg.cc/99hh9lr5v/slide3.jpg" alt="">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h3>Mountain</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="https://s19.postimg.cc/nenabzsnn/slide4.jpg" alt="" class="d-block img-fluid">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h3>Mountain</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
-                    </div>
-                </div>
+                {% endfor %}
             </div><!-- /.carousel-inner -->
 
             <a href="#main-carousel" class="carousel-control-prev" data-slide="prev">
@@ -58,43 +41,25 @@
 
 
 <!-- Carousel To rent -->
-	<div class="container carousel-rent">
+	<div class="container col-12 col-md-10 col-lg-8 col-xl-4 carousel-rent">
 		<div class="carousel slide" id="main-carousel" data-ride="carousel">
 			<ol class="carousel-indicators">
 				<li data-target="#main-carousel" data-slide-to="0" class="active"></li>
 				<li data-target="#main-carousel" data-slide-to="1"></li>
 				<li data-target="#main-carousel" data-slide-to="2"></li>
-				<li data-target="#main-carousel" data-slide-to="3"></li>
+                <li data-target="#main-carousel" data-slide-to="4"></li>
+                <li data-target="#main-carousel" data-slide-to="5"></li>
 			</ol><!-- /.carousel-indicators -->
 			
 			<div class="carousel-inner">
-				<div class="carousel-item active">
-					<img class="d-block img-fluid" src="https://s19.postimg.cc/qzj5uncgj/slide1.jpg" alt="">
-					<div class="carousel-caption d-none d-md-block">
-						<h1>Mountain</h1>
-					</div>
-				</div>
-				<div class="carousel-item">
-					<img class="d-block img-fluid" src="https://s19.postimg.cc/lmubh3h0j/slide2.jpg" alt="">
-					<div class="carousel-caption d-none d-md-block">
-						<h3>Mountain</h3>
-						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci esse vitae exercitationem fugit, numquam minus!</p>
-					</div>
-				</div>
-				<div class="carousel-item">
-					<img class="d-block img-fluid" src="https://s19.postimg.cc/99hh9lr5v/slide3.jpg" alt="">
-					<div class="carousel-caption d-none d-md-block">
-						<h3>Mountain</h3>
-						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci esse vitae exercitationem fugit, numquam minus!</p>
-					</div>
-				</div>
-				<div class="carousel-item">
-					<img src="https://s19.postimg.cc/nenabzsnn/slide4.jpg" alt="" class="d-block img-fluid">
-					<div class="carousel-caption d-none d-md-block">
-						<h3>Mountain</h3>
-						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci esse vitae exercitationem fugit, numquam minus!</p>
-					</div>
-				</div>
+				{% for item in for_rent %}
+                <div class="carousel-item img-fluid {% if loop.index == 1 %} active {% else %}{% endif %}">
+                    <img class="d-block w-100" src="{% if item.imgUrl %} {{item.imgUrl}} {% else %} {{url_for('static', filename='img/no-image.png') }}{% endif %}" alt="Property for sale">
+                    <div class="carousel-caption d-md-block">
+                        <span class="title-carousel">{{ item.address }}</span>
+                    </div>
+                </div>
+                {% endfor %}
 			</div><!-- /.carousel-inner -->
 			
 			<a href="#main-carousel" class="carousel-control-prev" data-slide="prev">
