--- a/seMgmtApp/templates/add_property.html
+++ b/seMgmtApp/templates/add_property.html
@@ -50,10 +50,10 @@
             </div>
             <!-- Address -->
             <div class="form-group">
-                <input type="text" class="form-control" id="address" name="address" placeholder="Address" required>
+                <input type="text" class="form-control" id="address" name="address" style="text-transform: capitalize;" placeholder="Address" required>
             </div>
             <div class="form-group">
-                <input type="text" class="form-control" id="address2" name="address2"
+                <input type="text" class="form-control" id="address2" name="address2" style="text-transform: capitalize;"
                     placeholder="Apartment, studio or floor number">
             </div>
             <!-- District -->
