banner added, setting media query

--- a/seMgmtApp/templates/index.html
+++ b/seMgmtApp/templates/index.html
@@ -2,11 +2,13 @@
 
 {% block content %}
 
-<div class="container-fluid">
 
+<div class="container-fluid p-0">
+        <div class="col-12 banner"></div>
 
     <!-- Carousel To buy -->
-    <div class="container col-12 col-md-10 col-lg-8 col-xl-4 carousel-buy">
+    <div class="carousel-main">
+    <div class="container col-12 col-md-6 col-xl-4 carousel-buy">
         <div class="carousel slide" id="main-carousel" data-ride="carousel">
             <ol class="carousel-indicators">
                 <li data-target="#main-carousel" data-slide-to="0" class="active"></li>
@@ -42,7 +44,7 @@
 
 
 <!-- Carousel To rent -->
-	<div class="container col-12 col-md-10 col-lg-8 col-xl-4 carousel-rent">
+	<div class="container col-12 col-md-6 col-xl-4 carousel-rent">
 		<div class="carousel slide" id="main-carousel" data-ride="carousel">
 			<ol class="carousel-indicators">
 				<li data-target="#main-carousel" data-slide-to="0" class="active"></li>
@@ -72,8 +74,8 @@
 				<span class="carousel-control-next-icon"></span>
 				<span class="sr-only" aria-hidden="true">Next</span>
 			</a>
-		</div><!-- /.carousel -->
-	</div><!-- /.container -->
+		</div>
+	</div>
 </div>
 
 
