--- a/seMgmtApp/static/css/style.css
+++ b/seMgmtApp/static/css/style.css
@@ -37,6 +37,18 @@ ul {
     font-size: 18px;
 }
 
+.banner {
+    display: flex;
+    width: 100%;
+    height: 39vh;
+    background-image: url("../img/banner.jpg");
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    margin: 0 auto;
+    padding: 0;
+}
+
 /* Carousel img fix size */
 
 .carousel-inner,
@@ -46,6 +58,7 @@ ul {
 }
 
 /* Carousel img fix size end */
+
 
 .title-carousel {
     background-color: rgba(255, 255, 255, 0.897);
@@ -405,6 +418,14 @@ ul {
         padding: 0;
     }
 
+    .carousel-main {
+        display: flex;
+    }
+
+    .carousel-rent {
+        margin: 1rem auto;
+    }
+
     .carousel-inner,
     .carousel-item,
     .carousel-inner .carousel-item .img {
@@ -413,6 +434,11 @@ ul {
 
     .title-carousel {
         font-size: 30px;
+    }
+
+    .banner {
+        background-image: url("../img/banner-md.jpg");
+        height: 30vh;
     }
 }
 
@@ -432,4 +458,15 @@ ul {
         padding: 5.5rem 5.5rem 0 5.5rem;
     }
 
+    .banner {
+        background-image: url("../img/banner-xl.jpg");
+        height: 50vh;
+    }
+}
+
+@media (min-width: 1550px) {
+    .banner {
+        background-image: url("../img/banner-xl.jpg");
+        height: 60vh;
+    }
 }
