index.html layout and responsiveness set

--- a/seMgmtApp/templates/index.html
+++ b/seMgmtApp/templates/index.html
@@ -3,13 +3,14 @@
 {% block content %}
 
 <div class="container-fluid p-0">
-    <div class="row col-12 banner"></div>
+    <div class="col-12 col-md-11 col-lg-10 col-xl-8 banner"></div>
 
-    <!-- Carousel To buy -->
-    <div class="container col-12 p-0">
+    <!-- Carousel -->
+    <div class="container col-12 col-md-11 col-lg-10 col-xl-8 p-0">
         <div class="carousel-main">
-            <div class="container carousel-buy">
-                <div class="row title-buy">Latest for sale</div>
+        <!-- Carousel To buy -->
+            <div class="container col-12 col-md-6 carousel-buy">
+                <div class="row title-buy">LATEST FOR SALE</div>
                 <div class="carousel slide" id="main-carousel" data-ride="carousel">
                     <ol class="carousel-indicators">
                         <li data-target="#main-carousel" data-slide-to="0" class="active"></li>
@@ -45,8 +46,8 @@
 
 
             <!-- Carousel To rent -->
-            <div class="container carousel-rent">
-                <div class="row title-rent">Latest for letting</div>
+            <div class="container col-12 col-md-6 carousel-rent">
+                <div class="row title-rent">LATEST FOR RENT</div>
                 <div class="carousel slide" id="main-carousel" data-ride="carousel">
                     <ol class="carousel-indicators">
                         <li data-target="#main-carousel" data-slide-to="0" class="active"></li>
