--- a/seMgmtApp/static/css/style.css
+++ b/seMgmtApp/static/css/style.css
@@ -38,35 +38,44 @@ ul {
 }
 
 .banner {
-    min-height: 35vh;
-    background-color: #FFF;
     background-image: url("../img/banner.jpg");
-    background-size: contain;
+    background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    margin: 0 auto;
+    width: 100%;
+    height: 280px;
+    border: 1px solid rgba(128, 128, 128, 0.308);
+    border-radius: 10px 10px 0 0;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    margin: 1rem auto 0 auto;
     padding: 0;
+
 }
 
 .title-buy,
 .title-rent {
     display: flex;
     justify-content: center;
-    color: white;
-    font-family: "poppins", sans-serif;
+    background-color: #FFF;
+    border: 1px solid rgba(128, 128, 128, 0.308);
+    border-bottom: 0;
+    border-radius: 10px 10px 0 0;
+    color: rgb(0, 0, 0);
+    font-weight: 500;
+    font-size: 18px;
     margin: 0;
     padding: 10px 0;
 }
 
-.carousel-main {
-    background-color: rgb(0, 0, 0);
-}
 
 /* Carousel img fix size */
 
 .carousel-inner,
 .carousel-item,
-.carousel-inner .carousel-item .img  {
+.carousel-inner .carousel-item .img {
+    border: 1px solid rgba(128, 128, 128, 0.308);
+    border-top: 0;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
     height: 30vh;
 }
 
@@ -95,13 +104,6 @@ ul {
     padding: 3rem 3rem 0 3rem;
 }
 
-.index-banner {
-    width: 100%;
-    height: 300px;
-    background-image: url('../img/main_banner.png');
-    background-repeat: no-repeat;
-    background-size: cover;
-}
 
 .carousel-buy {
     margin: 0 auto;
@@ -401,8 +403,7 @@ ul {
 
 @media (min-width: 420px) {
     .banner {
-        background-image: url("../img/banner-md.jpg");
-        min-height: 45vh;
+        background-image: url("../img/banner-xl.jpg");
     }
 }
 
@@ -446,19 +447,20 @@ ul {
         display: flex;
     }
 
-    .carousel-buy {
-        padding: 1rem;
-    }
-    
-    .carousel-rent {
-        padding: 1rem 1rem 1rem 0;
-    }
-
     .carousel-inner,
     .carousel-item,
     .carousel-inner .carousel-item .img {
-        height: 40vh;
+        height: 25vh;
     }
+
+    .carousel-buy {
+        padding: 1rem 1rem 1rem 0;
+    }
+
+    .carousel-rent {
+        padding: 1rem 0 1rem 0;
+    }
+
 
     .title-carousel {
         font-size: 30px;
@@ -472,8 +474,7 @@ ul {
     }
 
     .banner {
-        background-image: url("../img/banner-xl.jpg");
-        min-height: 32vh;
+        height: 40vh;
     }
 
 }
@@ -487,11 +488,21 @@ ul {
         padding: 5.5rem 5.5rem 0 5.5rem;
     }
 
+    .carousel-inner,
+    .carousel-item,
+    .carousel-inner .carousel-item .img {
+        height: 35vh;
+    }
 }
 
 @media (min-width: 1550px) {
     .banner {
-        background-image: url("../img/banner-xl.jpg");
-        min-height: 50vh;
+        height: 45vh;
+    }
+
+    .carousel-inner,
+    .carousel-item,
+    .carousel-inner .carousel-item .img {
+        height: 38vh;
     }
 }
