--- a/seMgmtApp/templates/partials/navbar.html
+++ b/seMgmtApp/templates/partials/navbar.html
@@ -21,7 +21,7 @@
             <li class="nav-item">
                 <a class="nav-link" href="{{ url_for('properties.my_ads') }}">My Ads</a></li>
             <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('main.index') }}">Profile</a></li>
+                <a class="nav-link" href="{{ url_for('profile.view_profile') }}">Profile</a></li>
             <li class="nav-item">
                 <a class="nav-link" href="{{ url_for('reg_login.logout') }}">Logout</a></li>
 
