background image change, working in profile page

--- a/seMgmtApp/templates/partials/navbar.html
+++ b/seMgmtApp/templates/partials/navbar.html
@@ -1,6 +1,6 @@
 <!-- Navbar -->
 <nav class="navbar navbar-expand-md navbar-light fixed-top navbar-color">
-    <a class="navbar-brand navbar-logo" href="#"></a>
+    <a class="navbar-brand navbar-logo" href="{{ url_for('main.index') }}"></a>
     <button class="navbar-toggler text-right" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
         aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
