--- a/seMgmtApp/templates/view_profile.html
+++ b/seMgmtApp/templates/view_profile.html
@@ -2,5 +2,16 @@
 
 {% block content %}
 
+<section class="col-12">
+    <div class="container">
+        <div class="row">
+            <div class="col-12 col-lg-9 mx-auto my-4 profile-box">
+                <div class="title-profile">
+                    <span>OLA TESTE</span>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
 {% endblock %}
