--- a/seMgmtApp/static/css/style.css
+++ b/seMgmtApp/static/css/style.css
@@ -393,6 +393,15 @@ ul {
 }
 
 
+/* PROFILE */
+
+.profile-box {
+    border-radius: 15px;
+    -webkit-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+    box-shadow: 0 8px 15px rgba(0, 0, 0, 0.16), 0 8px 15px rgba(0, 0, 0, 0.23);
+    background-color: #fffffff7
+}
+
 
 /* -----------------------------------
     MEDIA QUERY
