--- a/seMgmtApp/static/css/style.css
+++ b/seMgmtApp/static/css/style.css
@@ -93,7 +93,7 @@ ul {
 }
 
 .navbar-color {
-    background-color: #fffffff7;
+    background-color: #ffffff;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
@@ -120,8 +120,8 @@ ul {
 }
 
 .footer-main {
-    background-color: #fffffff7;
-    box-shadow: 0 -8px 6px -6px black;
+    background-color: #ffffff;
+    box-shadow: 0 -4px 4px -4px black;
     padding: 0.1rem 0 0 0;
 }
 
