--- a/seMgmtApp/templates/partials/navbar.html
+++ b/seMgmtApp/templates/partials/navbar.html
@@ -1,5 +1,5 @@
 <!-- Navbar -->
-<nav class="navbar navbar-expand-md navbar-black fixed-top navbar-color">
+<nav class="navbar navbar-expand-md navbar-light bg-light fixed-top navbar-color">
     <a class="navbar-brand navbar-logo" href="{{ url_for('main.index') }}"></a>
     <button class="navbar-toggler text-right" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
         aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
