--- a/seMgmtApp/templates/partials/navbar.html
+++ b/seMgmtApp/templates/partials/navbar.html
@@ -16,12 +16,16 @@
             </li>
             <!-- Check if there is a user logged in and show personal page -->
             {% if 'username' in session %}
-            <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('properties.add_property') }}">Add a Property</a></li>
-            <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('properties.my_ads') }}">My Ads</a></li>
-            <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('profile.view_profile') }}">Profile</a></li>
+
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle username-nav" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    {{ session.username }}
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                    <a class="dropdown-item" href="{{ url_for('properties.my_ads') }}">My Ads</a>
+                    <a class="dropdown-item" href="{{ url_for('properties.add_property') }}">Add a Property</a>
+                    <a class="dropdown-item" href="{{ url_for('profile.view_profile') }}">Profile</a>
+                </div>
             <li class="nav-item">
                 <a class="nav-link" href="{{ url_for('reg_login.logout') }}">Logout</a></li>
 
