--- a/seMgmtApp/templates/properties_list.html
+++ b/seMgmtApp/templates/properties_list.html
@@ -21,34 +21,54 @@
             </div>
 
         </div>
-        <div class="row mb-3">
+        <div class="row mt-4 mb-3">
             <div class="col-sm-12">
-                <nav class="pagination-a">
-                    <ul class="pagination justify-content-center">
-                        <li class="page-item disabled">
-                            <a class="page-link" href="#" tabindex="-1">
-                                <span class="ion-ios-arrow-back"></span>
+                
+                <!--Pagination-->
+                <nav>
+                    <ul class="pagination pagination-sm justify-content-center">
+                        
+                        <!--Previous Page-->
+                        {% if current_page | int > 1 %}
+                        <li class="page-item">
+                            <a class="page-link text-secondary" href="{{ url_for('properties.list_properties', current_page=current_page-1) }}">
+                                <i class="fas fa-arrow-left" aria-hidden="true"></i>
+                                <span class="sr-only">Prev</span>
                             </a>
                         </li>
+                        {% else %}
+                        <li class="page-item disabled"></li>
+                        {% endif %}
+
+                        <!--Page Numbers-->
+                        {% for page_number in pages %}
+                        {% if page_number == current_page %}
+                        <li class="page-item active text-secondary">
+                            <a class="page-link">{{ page_number }}</a>
+                        </li>
+                        {% else %}
                         <li class="page-item">
-                            <a class="page-link" href="#">1</a>
+                            <a class="page-link text-secondary"
+                                href="{{ url_for('properties.list_properties', current_page=page_number) }}">{{ page_number }}</a>
                         </li>
-                        <li class="page-item active">
-                            <a class="page-link" href="#">2</a>
-                        </li>
+                        {% endif %}
+                        {% endfor %}
+                        
+                        <!--Next Page-->
+                        {% if current_page | int < pages | count | int %}
                         <li class="page-item">
-                            <a class="page-link" href="#">3</a>
-                        </li>
-                        <li class="page-item next">
-                            <a class="page-link" href="#">
-                                <span class="ion-ios-arrow-forward"></span>
+                            <a class="page-link text-secondary" href="{{ url_for('properties.list_properties', current_page=current_page+1) }}">
+                                <i class="fas fa-arrow-right" aria-hidden="true"></i>
+                                <span class="sr-only">Prev</span>
                             </a>
                         </li>
+                        {% else %}
+                        <li class="page-item disabled"></li>
+                        {% endif %}
                     </ul>
                 </nav>
             </div>
         </div>
-    </div>
 </section>
 
 {% endblock %}
